Creted index page

--- a/dev/assets/index.html
+++ b/dev/assets/index.html
@@ -8,11 +8,187 @@
     <link rel="stylesheet" href="css/all.min.css">
   </head>
   <body>
-    <div class="container">
-      <div class="banner">
-        123
+    <header class="header">
+      <div class="container">
+        <div class="flex-row justify-space-between">
+          <div class="logo">
+            <a href="/"><img src="img/logo.svg"/></a>
+          </div>
+          <div class="flex-row header__contacts">
+            <span>Столица</span>
+            <span>test@yandex.ru</span>
+            <span>8 800 000 00 00</span>
+          </div>
+        </div>
       </div>
-    </div>
+    </header>
+    <section class="banner">
+      <div class="banner__content flex-row">
+        <div class="container">
+          <h1 class="h1">Бизнес инжиниринг</h1>
+          <p class="sub-title">Ресурсное и методологическое<br>обеспечение бизнеса и производства</p>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="flex-row services-main">
+          <div class="services-main__preview-item">
+              <div class="text-block">
+                <p class="text-block__title">Управление изменениями</p>
+                <p class="text-block__content">Современная рыночная среда характеризуется большим количеством факторов, влияющих на деятельность фирмы, динамичностью происходящих процессов, постоянно растущими клиентскими требованиями.</p>
+                <p class="text-block__link-more">
+                  <a href="#">Подробнее</a>
+                </p>
+              </div>
+            </div>
+            <div class="flex-row services-main__list">
+              <div class="service-block">
+                <div class="service-block__img">
+                    <img src="img/service-1.svg">
+                </div>
+                <p class="service-block__name">Разработка и внедрение стратегического плана</p>
+              </div>
+              <div class="service-block">
+                <div class="service-block__img">
+                    <img src="img/service-2.svg">
+                </div>
+                <p class="service-block__name">Развитие человеческого капитала </p>
+              </div>
+              <div class="service-block">
+                <div class="service-block__img">
+                    <img src="img/service-3.svg">
+                </div>
+                <p class="service-block__name">Проведение исследований, стратегический анализ</p>
+              </div>
+              <div class="service-block">
+                <div class="service-block__img">
+                    <img src="img/service-4.svg">
+                </div>
+                <p class="service-block__name">Реинжиниринг бизнес-процессов в компании </p>
+              </div>
+              <div class="service-block">
+                <div class="service-block__img">
+                    <img src="img/service-5.svg">
+                </div>
+                <p class="service-block__name">Разработка и внедрение системы управления качеством на предприятии </p>
+              </div>
+              <div class="service-block">
+                <div class="service-block__img">
+                    <img src="img/service-6.svg">
+                </div>
+                <p class="service-block__name">Управление рисками</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="dark-bg py-5">
+      <div class="container">
+        <div class="flex-row justify-space-between align-items-center">
+          <div class="col-5">
+            <div class="text-block text-block--dark">
+              <p class="text-block__title">Форматы коллаборации</p>
+              <p class="text-block__content">Вы сами принимаете решение о глубине нашего взаимодействия. Мы можем интегрироваться в вашу внутреннею среду настолько, насколько вы считаете для себя возможным на текущем этапе, с гарантиями полной конфиденциальности.</p>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="slidet-vertical">
+              <div class="slidet-vertical__item slidet-vertical__item--active info-block">
+                <div class="text-block text-block--small">
+                  <p class="text-block__title color-gray">Единовременные консультации</p>
+                  <p class="text-block__sub-title">Решение конкретной разовой задачи или потребности</p>
+                  <p class="text-block__content">Если у вас сформирована задача, для решения которой необходима профессиональная помощь, или имеется потребность в чем либо, то мы готовы изучить вопрос и дать понятное развёрнутое предложение.</p>
+                </div>
+              </div>
+              <div class="slidet-vertical__item info-block">
+                <div class="text-block text-block--small">
+                  <p class="text-block__title color-gray">Единовременные консультации</p>
+                  <p class="text-block__sub-title">Решение конкретной разовой задачи или потребности</p>
+                  <p class="text-block__content">Если у вас сформирована задача, для решения которой необходима профессиональная помощь, или имеется потребность в чем либо, то мы готовы изучить вопрос и дать понятное развёрнутое предложение.</p>
+                </div>
+              </div>
+              <div class="slidet-vertical__item info-block">
+                <div class="text-block text-block--small">
+                  <p class="text-block__title color-gray">Единовременные консультации</p>
+                  <p class="text-block__sub-title">Решение конкретной разовой задачи или потребности</p>
+                  <p class="text-block__content">Если у вас сформирована задача, для решения которой необходима профессиональная помощь, или имеется потребность в чем либо, то мы готовы изучить вопрос и дать понятное развёрнутое предложение.</p>
+                </div>
+              </div>
+
+              <a href="#" class="slidet-vertical__btn"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="py-5">
+      <div class="container">
+        <h2>Свежие статьи</h2>
+        <div class="flex-row justify-space-between">
+          <div class="article-main-preview">
+            <div class="article article-2-col flex-row">
+              <div class="article-2-col__img">
+                <img src="img/article-1.png">
+              </div>
+              <div class="article-2-col__content">
+                <div class="flex-row article__info mb-2">
+                  <span class="article__author">автор <a href="#">Антон Сухоруков</a></span>
+                  <span>12.05.2019</span>
+                  <span class="article__views">523</span>
+                </div>
+                <p class="article__name mb-2">Разбор классической административной школы менеджмента</p>
+                <p class="article__text mb-2">
+                  В прошлый раз я рассказывал о школе научного менеджмента (посмотреть статью можно здесь).
+                  <br>Теперь мы перенесёмся с североамериканского континента (именно там жили и трудились основатели) в Европу – родину классической административной школы.
+                </p>
+                <p class="article__link-more">
+                  <a href="">Читать</a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="article-main-list">
+            <div class="article article-vertical">
+              <div class="article-vertical__img mb-2" style="background-image: url(img/article-2.png)"></div>
+              <p class="article__name mb-2">Разбор школы научного менеджмента</p>
+              <div class="flex-row article__info">
+                <span class="article__author">автор <a href="#">Антон Сухоруков</a></span>
+                <span>12.05.2019</span>
+                <span class="article__views">523</span>
+              </div>
+            </div>
+            <div class="article article-vertical">
+              <div class="article-vertical__img mb-2" style="background-image: url(img/article-3.png)"></div>
+              <p class="article__name mb-2">Разбор школы бюрократии</p>
+              <div class="flex-row article__info">
+                <span class="article__author">автор <a href="#">Антон Сухоруков</a></span>
+                <span>12.05.2019</span>
+                <span class="article__views">523</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer light-bg">
+      <div class="container">
+        <div class="flex-row footer__content">
+          <span>Copyright ©  2019</span>
+          <a href="#">Пользовательское соглашение</a>
+          <a href="#">Политика конфиденциальности</a>
+          <div class="soc">
+            <a href="#" class="soc__link" target="_blank">
+              <img src="img/vk-ico.svg">
+            </a>
+            <a href="#" class="soc__link" target="_blank">
+              <img src="img/facebook-ico.svg">
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="js/libs.min.js"></script>
     <script src="js/all.min.js"></script>
   </body>
