--- a/dev/assets/index.html
+++ b/dev/assets/index.html
@@ -22,6 +22,22 @@
         </div>
       </div>
     </header>
+    <section class="main-menu">
+      <div class="container">
+        <div class="main-menu__wrapper">
+          <a href="#" class="main-menu__btn"></a>
+          <div class="main-menu__block">
+            <nav class="main-menu__nav">
+              <a href="#" class="main-menu__link">Отрасли</a>
+              <a href="#" class="main-menu__link">Банк знаний</a>
+              <a href="#" class="main-menu__link">Услуги</a>
+              <a href="#" class="main-menu__link">О нас</a>
+            </nav>
+            <a href="#" class="main-menu__close"></a>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="banner">
       <div class="banner__content flex-row">
         <div class="container">
