--- a/dev/assets/index.html
+++ b/dev/assets/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <div class="container">
         <div class="flex-row justify-space-between">
-          <div class="logo">
+          <div class="header__logo">
             <a href="/"><img src="img/logo.svg"/></a>
           </div>
           <div class="flex-row header__contacts">
@@ -141,7 +141,7 @@
     </section>
     <section class="py-5">
       <div class="container">
-        <h2>Свежие статьи</h2>
+        <h2 class="mb-4">Свежие статьи</h2>
         <div class="flex-row justify-space-between">
           <div class="article-main-preview">
             <div class="article article-2-col flex-row">
@@ -191,10 +191,10 @@
     <footer class="footer light-bg">
       <div class="container">
         <div class="flex-row footer__content">
-          <span>Copyright ©  2019</span>
+          <span class="footer__copyright">Copyright ©  2019</span>
           <a href="#">Пользовательское соглашение</a>
           <a href="#">Политика конфиденциальности</a>
-          <div class="soc">
+          <div class="footer__soc soc">
             <a href="#" class="soc__link" target="_blank">
               <img src="img/vk-ico.svg">
             </a>
