Created page about

--- a/dev/assets/index.html
+++ b/dev/assets/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <div class="container">
-        <div class="flex-row justify-space-between">
+        <div class="flex-row justify-space-between flex-wrap-nowrap">
           <div class="header__logo">
             <a href="/"><img src="img/logo.svg"/></a>
           </div>
