Created second pages

--- a/dev/assets/founder.html
+++ b/dev/assets/founder.html
@@ -50,24 +50,20 @@
       <div class="container">
         <div class="flex-row">
           <div class="workarea__left-side">
-            <img src="img/pic-1.jpg" class="img-block mb-5">
-            <a href="#popup-recall" class="btn btn--ico btn--mail popup">Написать нам</a>
+            <img src="img/pic-3.jpg" class="img-block mb-5">
           </div>
           <div class="workarea__content">
             <nav class="second-menu">
-              <a class="second-menu__link second-menu__link--active" href="/about.html">О компании</a>
+              <a class="second-menu__link" href="/about.html">О компании</a>
               <a class="second-menu__link" href="/mission.html">Миссия</a>
-              <a class="second-menu__link" href="/founder.html">Основатель</a>
+              <a class="second-menu__link second-menu__link--active" href="/founder.html">Основатель</a>
               <a class="second-menu__link" href="/contacts.html">Контакты</a>
             </nav>
-            <h3>Инжиниринг<br>(engineering, инжиниринговые услуги)</h3>
+            <h3>Сухоруков Антон Александрович</h3>
             <p>
-              - оказание на коммерческой основе различных инженерно-консультационных услуг, широкий спектр работ и услуг, предоставляемых консультационной компанией на основании заключенного контракта. Термин инжиниринг происходит от слова "engineering" - проектировать, устраивать, сооружать, затевать,  изобретать и придумывать.
+                Идейные соображения высшего порядка, а также реализация намеченных плановых заданий играет важную роль в формировании форм развития. Значимость этих проблем настолько очевидна, что постоянный количественный рост и сфера нашей активности способствует подготовки и реализации дальнейших направлений развития.
             </p>
-            <p>
-              <b>Главная задача инжиниринга</b> – создание или оптимизация бизнес-процессов, внедрение новых технологий, бизнес-моделирование. Инжиниринг является основой для внедрения производственных технологий, технологий управления и менеджмента, от которых непосредственно зависит эффективность работы и последующее развитие фирмы. 
-            </p>
-            <h3>К инжиниринговым услугам относится следующий перечень работ:</h3>
+            <h3>Основные компетенции</h3>
             <ul>
               <li>Подготовка технико-экономических обоснований проектов; оказание услуг инженерно-консультационного плана;</li>
               <li>Выполнение исследовательских  работ;</li>
