--- a/dev/assets/mission.html
+++ b/dev/assets/mission.html
@@ -50,31 +50,34 @@
       <div class="container">
         <div class="flex-row">
           <div class="workarea__left-side">
-            <img src="img/pic-1.jpg" class="img-block mb-5">
-            <a href="#popup-recall" class="btn btn--ico btn--mail popup">Написать нам</a>
+            <img src="img/pic-2.jpg" class="img-block mb-5">
           </div>
           <div class="workarea__content">
             <nav class="second-menu">
-              <a class="second-menu__link second-menu__link--active" href="/about.html">О компании</a>
-              <a class="second-menu__link" href="/mission.html">Миссия</a>
+              <a class="second-menu__link" href="/about.html">О компании</a>
+              <a class="second-menu__link second-menu__link--active" href="/mission.html">Миссия</a>
               <a class="second-menu__link" href="/founder.html">Основатель</a>
               <a class="second-menu__link" href="/contacts.html">Контакты</a>
             </nav>
-            <h3>Инжиниринг<br>(engineering, инжиниринговые услуги)</h3>
+            <h3>Наши миссии</h3>
             <p>
-              - оказание на коммерческой основе различных инженерно-консультационных услуг, широкий спектр работ и услуг, предоставляемых консультационной компанией на основании заключенного контракта. Термин инжиниринг происходит от слова "engineering" - проектировать, устраивать, сооружать, затевать,  изобретать и придумывать.
+              <b>Менеджмент трансформаций</b>. Техническая и отраслевая сторона проекта - это только один из аспектов преобразований предприятия. При преобразовании предприятия инновационные решения должны быть понятными для участвующих сотрудников, они должны быть заинтересованными, чтобы реализовать их. Поэтому необходимо приобщение так же культурологических и политических факторов (менеджмент изменений).
             </p>
             <p>
-              <b>Главная задача инжиниринга</b> – создание или оптимизация бизнес-процессов, внедрение новых технологий, бизнес-моделирование. Инжиниринг является основой для внедрения производственных технологий, технологий управления и менеджмента, от которых непосредственно зависит эффективность работы и последующее развитие фирмы. 
+              <b>Разделение уровней решений</b> - распределение задач по преобразованиямпо различным уровням (стратегический, организационный и технологический уровни решений) структурирует процесс трансформации.
             </p>
-            <h3>К инжиниринговым услугам относится следующий перечень работ:</h3>
-            <ul>
-              <li>Подготовка технико-экономических обоснований проектов; оказание услуг инженерно-консультационного плана;</li>
-              <li>Выполнение исследовательских  работ;</li>
-              <li>Проектное конструирование и расчетный анализ;</li>
-              <li>Изготовление. разработка и поставка решений и основных средств;</li>
-              <li>Предоставление рекомендаций в области организации производства и управления.</li>
-            </ul>
+            <p>
+              <b>Целостность</b> - бизнес-инжиниринг нацелен на то, чтобы все аспекты проекта трансформации были охвачены и оказали влияние на успех. Целостность означает не только поддержку инновационными решениями новых проектов, но и систематически внедряет их в действующие бизнес-процессы и производственные системы.
+            </p>
+            <p>
+              Разнообразный и богатый опыт укрепление и развитие структуры требуют от нас анализа соответствующий условий активизации. Значимость этих проблем настолько очевидна, что постоянное информационно-пропагандистское обеспечение нашей деятельности влечет за собой процесс внедрения и модернизации систем массового участия.
+            </p>
+            <p>
+              Таким образом начало повседневной работы по формированию позиции способствует подготовки и реализации дальнейших направлений развития. Значимость этих проблем настолько очевидна, что постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки дальнейших направлений развития.
+            </p>
+            <p>
+              <b>Разнообразный и богатый опыт</b> укрепление и развитие структуры требуют от нас анализа соответствующий условий активизации. Значимость этих проблем настолько очевидна, что постоянное информационно-пропагандистское обеспечение нашей деятельности влечет за собой процесс внедрения и модернизации систем массового участия.
+            </p>
           </div>
         </div>
       </div>
