--- a/dev/assets/startup.html
+++ b/dev/assets/startup.html
@@ -41,7 +41,7 @@
     <section class="banner banner--small banner--no-image">
       <div class="banner__content flex-row">
         <div class="container">
-          <h1 class="h1">О нас</h1>
+          <h1 class="h1">Отрасли</h1>
           <p class="sub-title">Ресурсное и методологическое<br>обеспечение бизнеса и производства</p>
         </div>
       </div>
@@ -50,31 +50,35 @@
       <div class="container">
         <div class="flex-row">
           <div class="workarea__left-side">
-            <img src="img/pic-1.jpg" class="img-block mb-5">
-            <a href="#popup-recall" class="btn btn--ico btn--mail popup">Написать нам</a>
+            <img src="img/pic-5.jpg" class="img-block mb-5">
           </div>
           <div class="workarea__content">
             <nav class="second-menu">
-              <a class="second-menu__link second-menu__link--active" href="/about.html">О компании</a>
-              <a class="second-menu__link" href="/mission.html">Миссия</a>
-              <a class="second-menu__link" href="/founder.html">Основатель</a>
-              <a class="second-menu__link" href="/contacts.html">Контакты</a>
+              <a class="second-menu__link" href="/industries.html">Строительная отрасль</a>
+              <a class="second-menu__link second-menu__link--active" href="/startup.html">Стартапы</a>
             </nav>
-            <h3>Инжиниринг<br>(engineering, инжиниринговые услуги)</h3>
             <p>
-              - оказание на коммерческой основе различных инженерно-консультационных услуг, широкий спектр работ и услуг, предоставляемых консультационной компанией на основании заключенного контракта. Термин инжиниринг происходит от слова "engineering" - проектировать, устраивать, сооружать, затевать,  изобретать и придумывать.
+              Строительство представляет собой отдельную, самостоятельную отрасль экономики страны, которая участвует в создании основных фондов для всех отраслей национального хозяйства. 
+              <br>Строительство относится к сфере материального производства, т.е. к отраслям, создающим материальные блага. 
             </p>
             <p>
-              <b>Главная задача инжиниринга</b> – создание или оптимизация бизнес-процессов, внедрение новых технологий, бизнес-моделирование. Инжиниринг является основой для внедрения производственных технологий, технологий управления и менеджмента, от которых непосредственно зависит эффективность работы и последующее развитие фирмы. 
+              Продукцией отрасли строительства являются законченные строительством и сданные в эксплуатацию заводы и фабрики, железные и автомобильные дороги, электростанции, судоходные каналы, порты, жилые дома и другие объекты, образующие основные фонды хозяйственного комплекса страны. 
+              <br>Кроме создания основных фондов, к функциям капитального строительства относятся расширение, реконструкция и техническое перевооружение уже действующих основных фондов. Поэтому основной задачей капитального строительства являются расширенное воспроизводство и качественное обновление основных фондов всех отраслей экономики страны.
             </p>
-            <h3>К инжиниринговым услугам относится следующий перечень работ:</h3>
-            <ul>
-              <li>Подготовка технико-экономических обоснований проектов; оказание услуг инженерно-консультационного плана;</li>
-              <li>Выполнение исследовательских  работ;</li>
-              <li>Проектное конструирование и расчетный анализ;</li>
-              <li>Изготовление. разработка и поставка решений и основных средств;</li>
-              <li>Предоставление рекомендаций в области организации производства и управления.</li>
-            </ul>
+            <p>
+              Капитальное строительство - это крупная индустриальная отрасль народного хозяйства страны, в которой создаются фонды производственного и непроизводственного назначения. Продукция строительства - это подготовленные к вводу в действие или реконструированные производства, предприятия, отдельные здания, сооружения, жилые дома, объекты транспорта, связи, сельского хозяйства и многие другие.
+            </p>
+            <p>
+              Задача организации, в особенности же постоянный количественный рост и сфера нашей активности в значительной степени обуславливает создание позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же дальнейшее развитие различных форм деятельности требуют определения и уточнения систем массового участия.
+            </p>
+            <p>
+              Таким образом реализация намеченных плановых заданий позволяет выполнять важные задания по разработке форм развития. Значимость этих проблем настолько очевидна, что консультация с широким активом позволяет оценить значение форм развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации новых предложений. Задача организации, в особенности же укрепление и развитие структуры играет важную роль в формировании существенных финансовых и административных условий. Повседневная практика показывает, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют определения и уточнения новых предложений. С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет оценить значение форм развития.
+            </p>
+            <p>
+              Таким образом укрепление и развитие структуры позволяет выполнять важные задания по разработке системы обучения кадров, соответствует насущным потребностям. Таким образом постоянный количественный рост и сфера нашей активности позволяет оценить значение форм развития.
+            </p>
+            <a href="#popup-recall" class="btn btn--ico btn--mail popup mt-3 mr-4">Написать нам</a>
+            <a href="#popup-order" class="btn btn--ico btn--file popup mt-3">Запрос на оказание услуг</a>
           </div>
         </div>
       </div>
