Created page article

--- a/dev/assets/index.html
+++ b/dev/assets/index.html
@@ -50,8 +50,50 @@
       <div class="container">
         <div class="flex-row services-main">
           <div class="services-main__preview-item">
-              <div class="text-block">
+              <div class="text-block services-main__item services-main__item--active" id="service-7">
                 <p class="text-block__title">Управление изменениями</p>
+                <p class="text-block__content">Современная рыночная среда характеризуется большим количеством факторов, влияющих на деятельность фирмы, динамичностью происходящих процессов, постоянно растущими клиентскими требованиями.</p>
+                <p class="text-block__link-more">
+                  <a href="#">Подробнее</a>
+                </p>
+              </div>
+              <div class="text-block services-main__item" id="service-1">
+                <p class="text-block__title">Разработка и внедрение стратегического плана</p>
+                <p class="text-block__content">Современная рыночная среда характеризуется большим количеством факторов, влияющих на деятельность фирмы, динамичностью происходящих процессов, постоянно растущими клиентскими требованиями.</p>
+                <p class="text-block__link-more">
+                  <a href="#">Подробнее</a>
+                </p>
+              </div>
+              <div class="text-block services-main__item" id="service-2">
+                <p class="text-block__title">Развитие человеческого капитала</p>
+                <p class="text-block__content">Современная рыночная среда характеризуется большим количеством факторов, влияющих на деятельность фирмы, динамичностью происходящих процессов, постоянно растущими клиентскими требованиями.</p>
+                <p class="text-block__link-more">
+                  <a href="#">Подробнее</a>
+                </p>
+              </div>
+              <div class="text-block services-main__item" id="service-3">
+                <p class="text-block__title">Проведение исследований, стратегический анализ</p>
+                <p class="text-block__content">Современная рыночная среда характеризуется большим количеством факторов, влияющих на деятельность фирмы, динамичностью происходящих процессов, постоянно растущими клиентскими требованиями.</p>
+                <p class="text-block__link-more">
+                  <a href="#">Подробнее</a>
+                </p>
+              </div>
+              <div class="text-block services-main__item" id="service-4">
+                <p class="text-block__title">Реинжиниринг бизнес-процессов в компании</p>
+                <p class="text-block__content">Современная рыночная среда характеризуется большим количеством факторов, влияющих на деятельность фирмы, динамичностью происходящих процессов, постоянно растущими клиентскими требованиями.</p>
+                <p class="text-block__link-more">
+                  <a href="#">Подробнее</a>
+                </p>
+              </div>
+              <div class="text-block services-main__item" id="service-5">
+                <p class="text-block__title">Разработка и внедрение системы управления качеством на предприятии</p>
+                <p class="text-block__content">Современная рыночная среда характеризуется большим количеством факторов, влияющих на деятельность фирмы, динамичностью происходящих процессов, постоянно растущими клиентскими требованиями.</p>
+                <p class="text-block__link-more">
+                  <a href="#">Подробнее</a>
+                </p>
+              </div>
+              <div class="text-block services-main__item" id="service-6">
+                <p class="text-block__title">Управление рисками</p>
                 <p class="text-block__content">Современная рыночная среда характеризуется большим количеством факторов, влияющих на деятельность фирмы, динамичностью происходящих процессов, постоянно растущими клиентскими требованиями.</p>
                 <p class="text-block__link-more">
                   <a href="#">Подробнее</a>
@@ -59,42 +101,48 @@
               </div>
             </div>
             <div class="flex-row services-main__list">
-              <div class="service-block">
+              <a class="service-block" href="#" data-id="service-1">
                 <div class="service-block__img">
                     <img src="img/service-1.svg">
                 </div>
                 <p class="service-block__name">Разработка и внедрение стратегического плана</p>
-              </div>
-              <div class="service-block">
+              </a>
+              <a class="service-block" href="#" data-id="service-2">
                 <div class="service-block__img">
                     <img src="img/service-2.svg">
                 </div>
-                <p class="service-block__name">Развитие человеческого капитала </p>
-              </div>
-              <div class="service-block">
+                <p class="service-block__name">Развитие человеческого капитала</p>
+              </a>
+              <a class="service-block" href="#" data-id="service-3">
                 <div class="service-block__img">
                     <img src="img/service-3.svg">
                 </div>
                 <p class="service-block__name">Проведение исследований, стратегический анализ</p>
-              </div>
-              <div class="service-block">
+              </a>
+              <a class="service-block" href="#" data-id="service-4">
                 <div class="service-block__img">
                     <img src="img/service-4.svg">
                 </div>
-                <p class="service-block__name">Реинжиниринг бизнес-процессов в компании </p>
-              </div>
-              <div class="service-block">
+                <p class="service-block__name">Реинжиниринг бизнес-процессов в компании</p>
+              </a>
+              <a class="service-block" href="#" data-id="service-5">
                 <div class="service-block__img">
                     <img src="img/service-5.svg">
                 </div>
-                <p class="service-block__name">Разработка и внедрение системы управления качеством на предприятии </p>
-              </div>
-              <div class="service-block">
+                <p class="service-block__name">Разработка и внедрение системы управления качеством на предприятии</p>
+              </a>
+              <a class="service-block" href="#" data-id="service-6">
                 <div class="service-block__img">
                     <img src="img/service-6.svg">
                 </div>
                 <p class="service-block__name">Управление рисками</p>
-              </div>
+              </a>
+              <a class="service-block service-block--active" href="#" data-id="service-7">
+                <div class="service-block__img">
+                    <img src="img/service-7.svg">
+                </div>
+                <p class="service-block__name">Управление изменениями</p>
+              </a>
             </div>
           </div>
         </div>
